--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -83,7 +83,7 @@ http://ionicframework.com/docs/theming/ */
    */
 
   body {
-    --ion-color-primary: #428cff;
+    --ion-color-primary: #60a5fa;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -197,10 +197,10 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #151515;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #ededed;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
@@ -226,11 +226,8 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-950: #f3f3f3;
 
     --ion-item-background: #1e1e1e;
-
-    --ion-toolbar-background: #1f1f1f;
-
-    --ion-tab-bar-background: #1f1f1f;
-
+    --ion-toolbar-background: #151515;
+    --ion-tab-bar-background: #151515;
     --ion-card-background: #1e1e1e;
   }
 }
